# mandelmrot

./: main.cpp
Mandelbrot&Julia_set/: CMakeLists.txt  main.cpp  main.hpp
